--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -10,6 +10,16 @@
                         <div class="card-body">
                             <form [formGroup]="orderFormGroup" (ngSubmit)="submitOrder()">
                                 <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Type</label>
+                                            <select class="form-control" placeholder="Type" formControlName="type">
+                                                <option value="" disabled>Select</option>
+                                                <option value="staffing">Staffing</option>
+                                                <option value="transport">Transport</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label>Title</label>
@@ -134,6 +144,109 @@
                                                                 formControlName="staffneeded">
                                                         </div>
                                                     </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12" *ngIf="orderFormGroup.value.type == 'transport'">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <label>Loading / Unloading Date</label>
+                                                <mat-calendar [selected]="transportrange"
+                                                    [comparisonStart]="transportrange.start"
+                                                    [comparisonEnd]="transportrange.end"
+                                                    (selectedChange)="onTransportRangeChange($event)"></mat-calendar>
+                                            </div>
+                                            <div class="col-md-8">
+                                                <div class="row">
+                                                    <ng-container>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>From(Depature)</label>
+                                                                <input type="text" class="form-control"
+                                                                    placeholder="From" formControlName="from">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>To(Arrival)</label>
+                                                                <input type="text" class="form-control"
+                                                                    placeholder="To" formControlName="to">
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Type Of Goods</label>
+                                                                <select class="form-control" placeholder="Type Of Goods"
+                                                                    formControlName="typeofgoods">
+                                                                    <option value="">Select</option>
+                                                                    <option value="Test1">Test1</option>
+                                                                    <option value="Test2">Test2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Weight</label>
+                                                                <input type="text" class="form-control"
+                                                                    placeholder="Weight" formControlName="weight">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Length</label>
+                                                                <input type="text" class="form-control"
+                                                                    placeholder="Length" formControlName="length">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Type Of Vehicle</label>
+                                                                <select class="form-control"
+                                                                    placeholder="Type Of Vehicle"
+                                                                    formControlName="vechicletype">
+                                                                    <option value="">Select</option>
+                                                                    <option value="Test1">Test1</option>
+                                                                    <option value="Test2">Test2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Packaging</label>
+                                                                <input type="text" class="form-control"
+                                                                    placeholder="Packaging" formControlName="packaging">
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Certificate</label>
+                                                                <select class="form-control"
+                                                                    placeholder="Type Of Certificate"
+                                                                    formControlName="certificate">
+                                                                    <option value="">Select</option>
+                                                                    <option value="Afval">Afval</option>
+                                                                    <option value="ADR">ADR</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label>Equipment</label>
+
+                                                                <select class="form-control"
+                                                                    placeholder="Type Of Equipment"
+                                                                    formControlName="equipment">
+                                                                    <option value="">Select</option>
+                                                                    <option value="Laadklep">Laadklep</option>
+                                                                    <option value="Pompwagen/Transpallet">
+                                                                        Pompwagen/Transpallet</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                    </ng-container>
                                                 </div>
                                             </div>
                                         </div>
