--- a/src/app/pages/assignments/assignments.component.html
+++ b/src/app/pages/assignments/assignments.component.html
@@ -256,7 +256,7 @@
                                     [disabled]="orderFormGroup.invalid">
                                     Submit
                                 </button>
-                                <button type="submit" class="btn btn-gradient-primary ml-3" (click)="cancel()">
+                                <button type="submit" class="btn btn-gradient-info ml-3" (click)="cancel()">
                                     Cancel
                                 </button><br><br><br><br>
                             </form>
