--- a/src/app/pages/place-orders/place-orders.component.html
+++ b/src/app/pages/place-orders/place-orders.component.html
@@ -247,10 +247,25 @@
                                                                 </select>
                                                             </div>
                                                         </div>
+                                                        
                                                     </ng-container>
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Stad</label>
+                                            <input class="form-control" type="text" placeholder="Stad" (keyup)="searchLocation()" formControlName="locationaddress" id="locationelement">
+                                            <div class="japp-search-rstlt">
+                                                <div class="drop ">
+                                                  <ul *ngIf="showSelectLocation">
+                                                    <li *ngFor="let loc of locations" (click)="selectedLocation(loc)"><a><img src="assets/images/location.svg" class="frm-date-icon"> {{loc?.description}}</a></li>
+                                                  </ul>
+                                                </div>
+                                              </div>
+                                        </div>
+                                        
                                     </div>
 
                                 </div>
